# Gen-AI---Agentic-AI

./: README.md
Week-01-Soccer-Scout-Pro/: README.md  ai_scout.py  app.py  charts.py  pyproject.toml
Week-02-FIFA-World-Cup-RAG/: .env.example  .gitignore  README.md  api.py  app.py  pyproject.toml
Week-02-FIFA-World-Cup-RAG/data/raw/: future_match_probabilities_baseline.csv  schedule_2026.csv  training_camps_2026.csv
Week-02-FIFA-World-Cup-RAG/docs/: evaluation_report.md  evaluation_results.json  google_doc_content.md  project_documentation.html
Week-02-FIFA-World-Cup-RAG/frontend/: index.html
Week-02-FIFA-World-Cup-RAG/scripts/: ingest.py
Week-02-FIFA-World-Cup-RAG/src/wc_rag/: chain.py  config.py  evaluation.py  indexing.py  ingestion.py  retriever.py
Week-03-Soccer-Scout-Pro/: .gitignore  README.md  app.py  data_loader.py  league_fit.py  pyproject.toml  test_brief.py  transfer_scout_agent.py
