[project]
name = "01-soccer-scouting-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.105.2",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]
