[project]
name = "fifa-wc-2026-rag"
version = "0.1.0"
description = "FIFA World Cup 2026 Fan Intelligence RAG Application"
requires-python = ">=3.11"
dependencies = [
    # LangChain core stack
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",   # OpenAI-compatible wrapper — used for Nebius endpoints
    "langchain-pinecone>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-cohere>=0.3.0",   # Cohere reranker cross-encoder
    "langgraph>=0.2.0",
    # Storage + retrieval
    "pinecone>=5.0.0",
    "rank-bm25>=0.2.2",          # sparse keyword retriever
    "cohere>=5.0.0",             # Cohere SDK (required by langchain-cohere)
    # Document loaders
    "beautifulsoup4>=4.12.0",    # HTML parsing for WebBaseLoader
    "pypdf>=4.0.0",              # PyPDFLoader — load PDF match reports
    "lxml>=5.0.0",               # faster HTML/XML parser for bs4
    # App + utilities
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",           # token counting for chunk-size validation
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc_rag"]
